# tgl

./: .gitignore  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  make_readme.sh  sample.el
doc/: Makefile.am  Makefile.in  tgl.1
src/: Makefile.am  Makefile.in  generate_builtins_c  interp.c  interp.h  strings.c  strings.h  tgl.c  tgl.h
src/builtins/: context.c  ctrl_for.c  ctrl_if.c  ctrl_while.c  defun.c  external.c  history.c  logical_ops.c  long_command.c  math_ops.c  payload.c  payload.h  quoting.c  registers.c  secarg.c  stack_ops.c  string_ops.c
